move to rollup & pug

--- a/page/mixin/message.pug
+++ b/page/mixin/message.pug
@@ -23,6 +23,6 @@ mixin message( title, text, icon, type )
 
     if link
       if link.href
-        a.button.button-reverse( href=link.href class='button-#{link.type}' )!= link.text
+        a.button.button-reverse( href=link.href class=`button-${link.type}` )!= link.text
       else
-        button.button.button-reverse( class='button-#{link.type}' )!= link.text
+        button.button.button-reverse( class=`button-${link.type}` )!= link.text
