--- a/page/view/theaters-list.pug
+++ b/page/view/theaters-list.pug
@@ -3,9 +3,9 @@ if theaters
     each theater in theaters
       unless !theater.id
         li.theater-item
-          a.item-title( href="/theaters/#{theater.id}" )
+          a.item-title( href=`/theaters/${theater.id}` )
             != theater.name
             if theater.address
               br
               //- small #{theater.address.street}, #{theater.address.zip} #{theater.address.city}
-              small #{theater.address}
+              small!= theater.address
