--- a/page/view/favorites-list.pug
+++ b/page/view/favorites-list.pug
@@ -1,10 +1,10 @@
-include ../mixin/message.jade
+include ../mixin/message
 
 if favorites.length
   ul.item-list
     each theater in favorites
       li.theater-item
-        a.item-title( href="/theaters/#{theater.id}" )!= theater.name
+        a.item-title( href=`/theaters/${theater.id}` )!= theater.name
         button.button.button-favorite( type="button" data-id=theater.id )
           include ../../_source/svg/icon_favorited.svg
           span Remove #{theater.name} from favorites
