--- a/page/view/movie.pug
+++ b/page/view/movie.pug
@@ -1,4 +1,4 @@
-include ../mixin/message.jade
+include ../mixin/message
 
 header.screen-header
   h1( title=title ).screen-title!= title
@@ -21,7 +21,7 @@ div.screen-content
                 article.movie
                   div.movie-infos
                     h1.movie-title
-                      a( href="/theaters/#{theater.id}" )
+                      a( href=`/theaters/${theater.id}` )
                         != theater.name
                         if theater.address
                           br
@@ -31,9 +31,9 @@ div.screen-content
                       ul.movie-infos-list
                         each info, key in theater.infos
                           if key === 'nextShowTime'
-                            li.movie-infos-item( class="movie-#{key}" ) (next screening #{info.formated})
+                            li.movie-infos-item( class=`movie-${key}` ) (next screening #{info.formated})
                           else
-                            li.movie-infos-item( class="movie-#{key}" )!= info
+                            li.movie-infos-item( class=`movie-${key}` )!= info
 
                     if theater.showtimes[0].info !== 'all'
                       ul
@@ -46,18 +46,18 @@ div.screen-content
                                 li.movie-times-item
                                   if time.disabled
                                     s
-                                      time( datetime="#{time.value}" )!= time.formated
+                                      time( datetime=`${time.value}` )!= time.formated
                                   else
-                                    time( datetime="#{time.value}" )!= time.formated
+                                    time( datetime=`${time.value}` )!= time.formated
                     else
                       ul.movie-times-list.movie-times
                         each time in theater.showtimes[0].times
                           li.movie-times-item
                             if time.disabled
                               s
-                                time( datetime="#{time.value}" )!= time.formated
+                                time( datetime=`${time.value}` )!= time.formated
                             else
-                              time( datetime="#{time.value}" )!= time.formated
+                              time( datetime=`${time.value}` )!= time.formated
       else
         +message( "Did you know?", "There's no screening for this movie near you" )
 
@@ -65,7 +65,7 @@ div.screen-content
 
       figure.movie-artwork
         span.movie-artwork-wrapper
-          img( src="/media/poster/#{id}" )
+          img( src=`/media/poster/${id}` )
 
       dl.info-desc.info-movie
         if runtime
@@ -94,5 +94,5 @@ div.screen-content
           dd
             figure.movie-trailer
               div
-                iframe( width="320" height="180" src="https://www.youtube.com/embed/#{trailer.split( '?v=' )[1]}?rel=0&amp;showinfo=0" frameborder="0" allowfullscreen )
+                iframe( width="320" height="180" src=`https://www.youtube.com/embed/${trailer.split( '?v=' )[1]}?rel=0&amp;showinfo=0` frameborder="0" allowfullscreen )
 
