--- a/page/view/movies.pug
+++ b/page/view/movies.pug
@@ -4,8 +4,8 @@ header.screen-header
   form#theaterFilter.screen-nav.screen-form
     span.input-floating
       include ../../_source/svg/icon_search.svg
-      input#movieBlob( type="text" pattern=".*" required value="#{screenParams.filter || ''}" autocomplete="off" )
+      input#movieBlob( type="text" pattern=".*" required value=`${screenParams.filter || ''}` autocomplete="off" )
       label( for="movieBlob" ) Search movies
 
 div.screen-content
-  include movies-list.jade
+  include movies-list
