change db schema for movie to allow duplicated movie per country - add trailer

--- a/page/view/around-list.pug
+++ b/page/view/around-list.pug
@@ -14,4 +14,4 @@ if movies
     ul.item-list
       each movie in movies
         li.theater-item
-          a.item-title( href=`/movies/${movie.id}` )!= movie.title
+          a.item-title( href=`/movies/${movie.imdbId}` )!= movie.title
