--- a/style/breakpoint/default/component-movie.styl
+++ b/style/breakpoint/default/component-movie.styl
@@ -59,10 +59,13 @@
    margin-top: rem( 3 )
 
    div
+      background: $color-secondary-light url( '/media/posters/default.png' ) no-repeat 50% 50%
+      background-size: auto 100%
       position: relative
       padding-top: ( 172/320*100% )
 
    iframe
+      background: transparent
       position: absolute
       left: 0
       top: 0
