--- a/style/settings.styl
+++ b/style/settings.styl
@@ -6,6 +6,7 @@ $color-primary-light = #b2b2b2
 $color-primary = #9c9c9c
 $color-primary-dark = #202020
 
+$color-secondary-light = #e7e7e7
 $color-secondary = #555
 $color-secondary-dark = #343434
 
