tell the user the serviceworker updated the app

--- a/page/layout/default.pug
+++ b/page/layout/default.pug
@@ -76,6 +76,8 @@ html( class="no-js intro" lang=lang )
 
     include ../module/layer-location
 
+    include ../module/layer-update
+
     include ../module/splash
 
     block script
