--- a/style/breakpoint/default/component-menu.styl
+++ b/style/breakpoint/default/component-menu.styl
@@ -15,6 +15,7 @@
             fill: $light
 
    .button-locationChange
+   .button-update
       outline: none
       padding: rem( 20 )
       text-align: center
