--- a/page/view/favorites-list.pug
+++ b/page/view/favorites-list.pug
@@ -4,7 +4,7 @@ if favorites.length
   ul.item-list
     each theater in favorites
       li.theater-item
-        a.item-title( href=`/theaters/${theater.id}` )!= theater.name
+        a.item-title( href=`/theaters/${theater.id}` data-id=theater.id )!= theater.name
         button.button.button-favorite( type="button" data-id=theater.id )
           include ../../_source/svg/icon_favorited.svg
           span Remove #{theater.name} from favorites
