--- a/page/view/movies-list.pug
+++ b/page/view/movies-list.pug
@@ -2,4 +2,4 @@ if movies
   ul.item-list
     each movie in movies
       li.movie-item
-        a.item-title( href=`/movies/${movie.imdbId}` )!= movie.title
+        a.item-title( href=`/movies/${movie.imdbId}` data-id=movie.imdbId )!= movie.title
