--- a/page/view/theaters-list.pug
+++ b/page/view/theaters-list.pug
@@ -3,7 +3,7 @@ if theaters
     each theater in theaters
       unless !theater.id
         li.theater-item
-          a.item-title( href=`/theaters/${theater.id}` )
+          a.item-title( href=`/theaters/${theater.id}` data-id=theater.id )
             != theater.name
             if theater.address
               br
