--- a/page/view/around-list.pug
+++ b/page/view/around-list.pug
@@ -14,4 +14,4 @@ if movies
     ul.item-list
       each movie in movies
         li.theater-item
-          a.item-title( href=`/movies/${movie.imdbId}` data-id=movie.imdbId data-type="movies" )!= movie.title
+          a.item-title( href=`/movies/${movie.id}` data-id=movie.id data-type="movies" )!= movie.title
