--- a/style/breakpoint/default/object-screen.styl
+++ b/style/breakpoint/default/object-screen.styl
@@ -50,7 +50,7 @@
       &:empty:before
          width: 70%
 
-      &[aria-expanded=true]:not( :empty )
+      &[aria-selected=true]:not( :empty )
          &:after
             content: ''
             position: absolute
