--- a/style/breakpoint/default/component-home.styl
+++ b/style/breakpoint/default/component-home.styl
@@ -32,7 +32,9 @@
 
    img
       display: block
+      height: 100%
       left: 50%
+      object-fit: cover
       position: absolute
       top: 50%
       transform: translate( -50%, -50% )
