show a notification dot in the menu button when theres a service worker update

--- a/page/module/header.pug
+++ b/page/module/header.pug
@@ -6,6 +6,8 @@ header( role="banner" ).site-header
   button.site-header-button.layer-control( type="button" aria-controls="menu" aria-expanded="false" )
     include ../../_source/svg/icon_menu.svg
     span Menu
+    span.notification( hidden )
+      span 1 notification
 
   button.site-header-button.button-back( type="button" )
     include ../../_source/svg/icon_back.svg
